[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/animations/lightning_flash/trace_02.png" type="Texture" id=1]
[ext_resource path="res://assets/animations/lightning_flash/trace_05.png" type="Texture" id=2]
[ext_resource path="res://assets/animations/lightning_flash/trace_04.png" type="Texture" id=3]
[ext_resource path="res://assets/animations/lightning_flash/trace_03.png" type="Texture" id=4]
[ext_resource path="res://assets/animations/lightning_flash/trace_01.png" type="Texture" id=5]
[ext_resource path="res://scripts/LightPillar.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "wavering_flame",
"speed": 15.0
} ]

[node name="LightPillar" type="Node2D"]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "wavering_flame"
frame = 4
speed_scale = 0.5

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 7, -64 )
rotation = 3.14159
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 1 )
animation = "wavering_flame"
frame = 3
speed_scale = 0.5

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 5.5, -35.5 )
scale = Vector2( 6.55, 26.25 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
